--- a/HelpDeskTool/AddRemoveWindow.xaml
+++ b/HelpDeskTool/AddRemoveWindow.xaml
@@ -49,7 +49,7 @@
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
-        <Button x:Name="AddGUButton" Content="Add Users to Groups" HorizontalAlignment="Left" Height="26" Margin="375,124,0,0" VerticalAlignment="Top" Width="152" Click="AddGUButton_Click">
+        <Button x:Name="AddGUButton" Content="Add Groups to Users" HorizontalAlignment="Left" Height="26" Margin="375,124,0,0" VerticalAlignment="Top" Width="152" Click="AddGUButton_Click">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="White" Offset="0.178"/>
@@ -57,7 +57,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="RemoveGUButton" Content="Remove Users from Groups" HorizontalAlignment="Left" Height="26" Margin="375,155,0,0" VerticalAlignment="Top" Width="152" Click="RemoveGUButton_Click">
+        <Button x:Name="RemoveGUButton" Content="Remove Groups from Users" HorizontalAlignment="Left" Height="26" Margin="375,155,0,0" VerticalAlignment="Top" Width="152" Click="RemoveGUButton_Click">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="White"/>
