--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -30,7 +30,7 @@
         <TextBox x:Name="UserTextbox" HorizontalAlignment="Left" Height="18" Margin="97,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="ADinfoButton" Content="User info" HorizontalAlignment="Left" Height="30" Margin="231,54,0,0" VerticalAlignment="Top" Width="60" Click="ADinfoButton_Click" RenderTransformOrigin="0.021,0.544"/>
         <Button x:Name="MemberOfButton" Content="Member of" HorizontalAlignment="Center" Height="30" Margin="0,54,0,0" VerticalAlignment="Top" Width="60" Click="MemberOfButton_Click" FontSize="11"/>
-        <Button x:Name="SerialButton" Content="Get Serial" HorizontalAlignment="Left" Height="30" Margin="556,10,0,0" VerticalAlignment="Top" Width="60" Click="SerialButton_Click"/>
+        <Button x:Name="ADPCInfoButton" Content="AD PC info" HorizontalAlignment="Left" Height="30" Margin="556,10,0,0" VerticalAlignment="Top" Width="60" Click="ADPCInfoButton_Click" FontSize="11"/>
         <Button x:Name="MembersButton" Content="Members" HorizontalAlignment="Left" Height="30" Margin="427,54,0,0" VerticalAlignment="Top" Width="60" Click="MembersButton_Click"/>
         <Border BorderBrush="Black" BorderThickness="1" Margin="0,106,0,0">
             <RichTextBox x:Name="OutputBox" Margin="19,17,19,9" IsReadOnly="True" FontSize="11" TextBlock.LineHeight="1">
@@ -45,6 +45,5 @@
         <Button x:Name="PassButton" Content="Pass Last Set/&#xD;&#xA;Last Bad Pass" HorizontalAlignment="Left" Height="30" Margin="556,54,0,0" VerticalAlignment="Top" Width="60" FontSize="9" Click="PassButton_Click"/>
         <Button x:Name="ClearButton" Content="Clear" HorizontalAlignment="Left" Height="30" Margin="569,125,0,0" VerticalAlignment="Top" Width="60" Click="ClearButton_Click" RenderTransformOrigin="0.533,0.562" Background="#FFC33636" BorderThickness="2,2,2,2"/>
         <Button x:Name="ADGroupInfoButton" Content="Group info" HorizontalAlignment="Left" Height="30" Margin="361,54,0,0" VerticalAlignment="Top" Width="60" Click="ADGroupInfoButton_Click" RenderTransformOrigin="0.021,0.544"/>
-        <Button x:Name="ExportButton" Content="Export" HorizontalAlignment="Left" Height="30" Margin="569,155,0,0" VerticalAlignment="Top" Width="60" FontSize="11" Click="ExportButton_Click"/>
     </Grid>
 </Window>
