--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -29,7 +29,7 @@
         <Label Content="AD Name:" HorizontalAlignment="Left" Height="29" Margin="10,55,0,0" VerticalAlignment="Top" Width="84"/>
         <TextBox x:Name="UserTextbox" HorizontalAlignment="Left" Height="18" Margin="87,60,0,0" VerticalAlignment="Top" Width="130" FontSize="11" TextWrapping="Wrap" Grid.IsSharedSizeScope="True" UseLayoutRounding="False"/>
         <Button x:Name="ADinfoButton" Content="User info" HorizontalAlignment="Left" Height="30" Margin="231,54,0,0" VerticalAlignment="Top" Width="60" Click="ADinfoButton_Click" RenderTransformOrigin="0.021,0.544"/>
-        <Button x:Name="MemberOfButton" Content="Member of" HorizontalAlignment="Center" Height="30" Margin="0,54,0,0" VerticalAlignment="Top" Width="60" Click="MemberOfButton_Click" FontSize="11"/>
+        <Button x:Name="MemberOfButton" Content="Member of" HorizontalAlignment="Left" Height="30" Margin="295,54,0,0" VerticalAlignment="Top" Width="60" Click="MemberOfButton_Click" FontSize="11"/>
         <Button x:Name="ADPCInfoButton" Content="AD PC info" HorizontalAlignment="Left" Height="30" Margin="556,10,0,0" VerticalAlignment="Top" Width="60" Click="ADPCInfoButton_Click" FontSize="11"/>
         <Button x:Name="MembersButton" Content="Members" HorizontalAlignment="Left" Height="30" Margin="427,54,0,0" VerticalAlignment="Top" Width="60" Click="MembersButton_Click"/>
         <Border BorderBrush="Black" BorderThickness="1" Margin="0,106,0,0">
