--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -28,10 +28,10 @@
         <Button x:Name="RemoteButton" Content="Remote in" HorizontalAlignment="Left" Height="30" Margin="491,10,0,0" VerticalAlignment="Top" Width="60" Click="RemoteButton_Click"/>
         <Label Content="AD Name:" HorizontalAlignment="Left" Height="29" Margin="10,55,0,0" VerticalAlignment="Top" Width="84"/>
         <TextBox x:Name="UserTextbox" HorizontalAlignment="Left" Height="18" Margin="87,60,0,0" VerticalAlignment="Top" Width="130" FontSize="11" TextWrapping="Wrap" Grid.IsSharedSizeScope="True" UseLayoutRounding="False"/>
-        <Button x:Name="ADinfoButton" Content="User info" HorizontalAlignment="Left" Height="30" Margin="231,54,0,0" VerticalAlignment="Top" Width="60" Click="ADinfoButton_Click" RenderTransformOrigin="0.021,0.544"/>
+        <Button x:Name="UserInfoButton" Content="User info" HorizontalAlignment="Left" Height="30" Margin="231,54,0,0" VerticalAlignment="Top" Width="60" Click="UserInfoButton_Click" RenderTransformOrigin="0.021,0.544"/>
         <Button x:Name="MemberOfButton" Content="Member of" HorizontalAlignment="Left" Height="30" Margin="295,54,0,0" VerticalAlignment="Top" Width="60" Click="MemberOfButton_Click" FontSize="11"/>
-        <Button x:Name="ADPCInfoButton" Content="AD PC info" HorizontalAlignment="Left" Height="30" Margin="556,10,0,0" VerticalAlignment="Top" Width="60" Click="ADPCInfoButton_Click" FontSize="11"/>
-        <Button x:Name="MembersButton" Content="Members" HorizontalAlignment="Left" Height="30" Margin="427,54,0,0" VerticalAlignment="Top" Width="60" Click="MembersButton_Click"/>
+        <Button x:Name="ComputerInfoButton" Content="AD PC info" HorizontalAlignment="Left" Height="30" Margin="556,10,0,0" VerticalAlignment="Top" Width="60" Click="ComputerInfoButton_Click" FontSize="11"/>
+        <Button x:Name="GroupMembersButton" Content="Members" HorizontalAlignment="Left" Height="30" Margin="427,54,0,0" VerticalAlignment="Top" Width="60" Click="GroupMembersButton_Click"/>
         <Border BorderBrush="Black" BorderThickness="1" Margin="0,106,0,0">
             <RichTextBox x:Name="OutputBox" Margin="19,17,19,9" IsReadOnly="True" FontSize="11" TextBlock.LineHeight="1">
                 <FlowDocument>
@@ -43,7 +43,7 @@
         </Border>
         <Button x:Name="AddgroupButton" Content="Add/Remove&#xD;&#xA;Group" HorizontalAlignment="Left" Height="30" Margin="491,54,0,0" VerticalAlignment="Top" Width="60" Click="AddgroupButton_Click" FontSize="9"/>
         <Button x:Name="ClearButton" Content="Clear" HorizontalAlignment="Left" Height="30" Margin="569,125,0,0" VerticalAlignment="Top" Width="60" Click="ClearButton_Click" RenderTransformOrigin="0.533,0.562" Background="#FFC33636" BorderThickness="2,2,2,2"/>
-        <Button x:Name="ADGroupInfoButton" Content="Group info" HorizontalAlignment="Left" Height="30" Margin="361,54,0,0" VerticalAlignment="Top" Width="60" Click="ADGroupInfoButton_Click" RenderTransformOrigin="0.021,0.544"/>
+        <Button x:Name="GroupInfoButton" Content="Group info" HorizontalAlignment="Left" Height="30" Margin="361,54,0,0" VerticalAlignment="Top" Width="60" Click="GroupInfoButton_Click" RenderTransformOrigin="0.021,0.544"/>
         <Button x:Name="HelpButton" Content="Help" HorizontalAlignment="Left" Height="30" Margin="569,155,0,0" VerticalAlignment="Top" Width="60" Click="HelpButton_Click" FontSize="11"/>
     </Grid>
 </Window>
