--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -33,7 +33,7 @@
         <Button x:Name="ComputerInfoButton" Content="AD PC info" HorizontalAlignment="Left" Height="30" Margin="556,10,0,0" VerticalAlignment="Top" Width="60" Click="ComputerInfoButton_Click" FontSize="11"/>
         <Button x:Name="GroupMembersButton" Content="Members" HorizontalAlignment="Left" Height="30" Margin="427,54,0,0" VerticalAlignment="Top" Width="60" Click="GroupMembersButton_Click"/>
         <Border BorderBrush="Black" BorderThickness="1" Margin="0,106,0,0">
-            <RichTextBox x:Name="OutputBox" Margin="19,17,19,9" IsReadOnly="True" FontSize="11" TextBlock.LineHeight="1">
+            <RichTextBox x:Name="OutputBox" Margin="19,17,19,9" IsReadOnly="True" TextBlock.LineHeight="1">
                 <FlowDocument>
                     <Paragraph>
                         <Run Text=""/>
