--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DTTool.MainWindow"
+﻿<Window x:Name="MainWindow1" x:Class="DTTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -21,12 +21,12 @@
         </Grid.ColumnDefinitions>
         <TextBox x:Name="NameBox" HorizontalAlignment="Left" Margin="87,16,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="130" Height="17" HorizontalScrollBarVisibility="Disabled" FontSize="11"/>
         <Button x:Name="RestartButton" Content="Restart" HorizontalAlignment="Left" Height="30" Margin="231,10,0,0" VerticalAlignment="Top" Width="60" Click="RestartButton_Click"/>
-        <Label Content="PC Name/IP:" HorizontalAlignment="Left" Height="30" Margin="10,9,0,0" VerticalAlignment="Top" Width="84"/>
+        <Label x:Name="PCNameBox" Content="PC Name/IP:" HorizontalAlignment="Left" Height="30" Margin="10,9,0,0" VerticalAlignment="Top" Width="84"/>
         <Button x:Name="PingButton" Content="Ping" HorizontalAlignment="Left" Height="30" Margin="296,10,0,0" VerticalAlignment="Top" Width="60" Click="PingButton_Click"/>
         <Button x:Name="NslookupButton" Content="nslookup" HorizontalAlignment="Left" Height="30" Margin="426,10,0,0" VerticalAlignment="Top" Width="60" Click="NslookupButton_Click"/>
         <Button x:Name="SysinfoButton" Content="Sys. info" HorizontalAlignment="Left" Height="30" Margin="361,10,0,0" VerticalAlignment="Top" Width="60" Click="SysinfoButton_Click"/>
         <Button x:Name="RemoteButton" Content="Remote in" HorizontalAlignment="Left" Height="30" Margin="491,10,0,0" VerticalAlignment="Top" Width="60" Click="RemoteButton_Click"/>
-        <Label Content="AD Name:" HorizontalAlignment="Left" Height="29" Margin="10,55,0,0" VerticalAlignment="Top" Width="84"/>
+        <Label x:Name="ADNameBox" Content="AD Name:" HorizontalAlignment="Left" Height="29" Margin="10,55,0,0" VerticalAlignment="Top" Width="84"/>
         <TextBox x:Name="UserTextbox" HorizontalAlignment="Left" Height="18" Margin="87,60,0,0" VerticalAlignment="Top" Width="130" FontSize="11" TextWrapping="Wrap" Grid.IsSharedSizeScope="True" UseLayoutRounding="False"/>
         <Button x:Name="UserInfoButton" Content="User info" HorizontalAlignment="Left" Height="30" Margin="231,54,0,0" VerticalAlignment="Top" Width="60" Click="UserInfoButton_Click" RenderTransformOrigin="0.021,0.544"/>
         <Button x:Name="MemberOfButton" Content="Member of" HorizontalAlignment="Left" Height="30" Margin="295,54,0,0" VerticalAlignment="Top" Width="60" Click="MemberOfButton_Click" FontSize="11"/>
@@ -46,5 +46,6 @@
         <Button x:Name="GroupInfoButton" Content="Group info" HorizontalAlignment="Left" Height="30" Margin="361,54,0,0" VerticalAlignment="Top" Width="60" Click="GroupInfoButton_Click" RenderTransformOrigin="0.021,0.544"/>
         <Button x:Name="HelpButton" Content="Help" HorizontalAlignment="Left" Height="30" Margin="569,155,0,0" VerticalAlignment="Top" Width="60" Click="HelpButton_Click" FontSize="11"/>
         <Button x:Name="MasterSearchButton" Content="Master Search" HorizontalAlignment="Left" Height="30" Margin="556,54,0,0" VerticalAlignment="Top" Width="60" Click="MasterSearchButton_Click" FontSize="9"/>
+        <Button x:Name="DarkButton" Content="Dark Mode" HorizontalAlignment="Left" Height="30" Margin="569,185,0,0" VerticalAlignment="Top" Width="60" Click="DarkButton_Click" FontSize="11"/>
     </Grid>
 </Window>
