--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -12,7 +12,7 @@
             <GradientStop Color="#FF41D84A" Offset="1"/>
         </LinearGradientBrush>
     </Window.Background>
-    <Grid HorizontalAlignment="Center" Width="650">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
@@ -42,10 +42,10 @@
             </RichTextBox>
         </Border>
         <Button x:Name="AddgroupButton" Content="Add/Remove&#xD;&#xA;Group" HorizontalAlignment="Left" Height="30" Margin="491,54,0,0" VerticalAlignment="Top" Width="60" Click="AddgroupButton_Click" FontSize="9"/>
-        <Button x:Name="ClearButton" Content="Clear" HorizontalAlignment="Left" Height="30" Margin="569,125,0,0" VerticalAlignment="Top" Width="60" Click="ClearButton_Click" RenderTransformOrigin="0.533,0.562" Background="#FFC33636" BorderThickness="2,2,2,2"/>
+        <Button x:Name="ClearButton" Content="Clear" HorizontalAlignment="Right" Height="30" Margin="0,125,21,0" VerticalAlignment="Top" Width="60" Click="ClearButton_Click" RenderTransformOrigin="0.533,0.562" Background="#FFC33636" BorderThickness="2,2,2,2"/>
         <Button x:Name="GroupInfoButton" Content="Group info" HorizontalAlignment="Left" Height="30" Margin="361,54,0,0" VerticalAlignment="Top" Width="60" Click="GroupInfoButton_Click" RenderTransformOrigin="0.021,0.544"/>
-        <Button x:Name="HelpButton" Content="Help" HorizontalAlignment="Left" Height="30" Margin="569,155,0,0" VerticalAlignment="Top" Width="60" Click="HelpButton_Click" FontSize="11"/>
+        <Button x:Name="HelpButton" Content="Help" HorizontalAlignment="Right" Height="30" Margin="0,155,21,0" VerticalAlignment="Top" Width="60" Click="HelpButton_Click" FontSize="11"/>
         <Button x:Name="MasterSearchButton" Content="Master Search" HorizontalAlignment="Left" Height="30" Margin="556,54,0,0" VerticalAlignment="Top" Width="60" Click="MasterSearchButton_Click" FontSize="9"/>
-        <Button x:Name="DarkButton" Content="Dark Mode" HorizontalAlignment="Left" Height="30" Margin="569,185,0,0" VerticalAlignment="Top" Width="60" Click="DarkButton_Click" FontSize="11"/>
+        <Button x:Name="DarkButton" Content="Dark Mode" HorizontalAlignment="Right" Height="30" Margin="0,185,21,0" VerticalAlignment="Top" Width="60" Click="DarkButton_Click" FontSize="11"/>
     </Grid>
 </Window>
