--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -49,5 +49,6 @@
         <Button x:Name="DarkButton" Content="Dark Mode" HorizontalAlignment="Right" Height="30" Margin="0,185,21,0" VerticalAlignment="Top" Width="60" Click="DarkButton_Click" FontSize="11"/>
         <Button x:Name="ExportButton" Content="Export" HorizontalAlignment="Right" Height="30" Margin="0,215,21,0" VerticalAlignment="Top" Width="60" Click="ExportButton_Click" FontSize="11"/>
         <Button x:Name="LockoutToolButton" Content="Pwd info" HorizontalAlignment="Left" Height="30" Margin="621,54,0,0" VerticalAlignment="Top" Width="60" Click="LockoutToolButton_Click" FontSize="9"/>
+        <Button x:Name="SettingsButton" Content="Settings" HorizontalAlignment="Right" Height="30" Margin="0,245,21,0" VerticalAlignment="Top" Width="60" Click="SettingsButton_Click" FontSize="11"/>
     </Grid>
 </Window>
